# ChangeLog for dev-perl/Validate-Tiny
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Validate-Tiny/ChangeLog,v 1.1 2015/02/22 00:43:17 monsieurp Exp $