@@ -3,6 +3,6 @@ DIST PDFBox-0.7.3.zip 22769102 SHA256 5c6f6c87cdbf247ff29d0ce691ab977c2e869070d5
 DIST pcfi-2010.08.09.jar 6731455 SHA256 a787fb2a842de7bd5ee4fa13c4808aa6793380dde0219560b50054f6ca25c77c SHA512 067394ddac4a48ba8ac94b03f907d0faf98a91be658689a34eb85fdce49515582426f6a1fa433bfa87ca417ce3a6fa3aa89d89126a36176d8e04f3359c36d10b WHIRLPOOL fa9e9b6b2cc45f749101726c8fb7a4c7719d78448122c465b60696cd5be1a2a27bc65f549429d5a74c79bc74aaed39b3c0a8dfe02ec569303b96faa818410e73
 DIST pdfbox-1.8.8-src.zip 11339989 SHA256 90d6b9a33682586e29bbce4ffeadf38c12fe0373bfe82441c1a63610a9c4ea8a SHA512 254361d0dcbfdc52bc78a2ed7e121065a2d173d1362a219d6644c3cc8a83a37904744e03f1725e2db67494d5f54f822b6e5a16dd8e791906efb9c348d564552f WHIRLPOOL cd9e71be60ee6d92c34f4affe7d6b074896920491a731a65f2b74e9e09754e836288c632e5d4a24b2d8aba64505dc58d2c3f8d0dd103c33773fce6dcd187e5a3
 EBUILD pdfbox-0.7.3-r3.ebuild 2602 SHA256 a7f10849a5f208e8a459d935d6654e86328230f4a950d0b5ac205a9ab0556525 SHA512 c3fc7dd5c9eb67e318b3edd48cf5be7ef1492024f37061e99cd38db4f5ac1d304cc47594a83c9d7fe2fdda4b4f667c271baf38f890f6e8c914a3541966e0c917 WHIRLPOOL b1c31be2facdf97df0dfd021b4e97fd950b314f5b524d63cc752245aaa4804a8d9713d763175cdc4323a5ab4dc7567d2741ce6ba5ee0cc73db3a0eea4e6dbe6c
-EBUILD pdfbox-1.8.8.ebuild 2011 SHA256 dab1b543580f1112b37e7d88f807be90edfad6437cb42366784623480b88c788 SHA512 3b8e6ad4d79eda79fe6a626b76a80ba30f39d18973f4a3b5e6c652b05b3999994b65872494b454db0f389335dd83756a4f38d24bb86b3a568af67d6d7410acb2 WHIRLPOOL 6a5e1fe252ac570414101319d1da87f1304e448ff8f0a5a98b17080f0b4660960992f4fee86dd98d9d76ce5f47add0070a50a577356c773a149a4535253a13b1
-MISC ChangeLog 3849 SHA256 c9fe304b7fef861a061622d00defb99335fdbd018ef8c4cff03d5f48738ff31f SHA512 91590dc6584a542b3976b7eecf200a6979293527a904b56f88922088be1185d4fa1358275758700c3b327303e5809af8d7aae3b101357053c5e741ea5d57ab3b WHIRLPOOL 62f5d9e38410bc046d14a2a108ccea5604f8db70af3a9458e1da17cf4a64dfc5cac0feaf1dcb03924befb2b9e70ee89011ce485e5601f23044e0474904f2907f
+EBUILD pdfbox-1.8.8.ebuild 2013 SHA256 6359c111d4178ce4deff7d555fb4ad8c0951601a0118c4ee2d028bf41b0a5ec6 SHA512 b16a50b96c3591dd8a247c41c6b8f94d0ecd909915d5a746894915c16b6659e85106f19a8015b58442d8e4e97fabde042963156c47b799de0f4c0e0e0c18e33e WHIRLPOOL 0568d0c0ed26e956af167234cf32f43df42f8a6ddce318d4e075383d532a670251319260b77f06788204eaf56c62e00ac720043fdecec32ea22b230d44ef5b14
+MISC ChangeLog 3969 SHA256 ecbdb134f1ae72d1dea18457adb6a06f16dda7bc799190ac88aaec9798371062 SHA512 9dbe6869c8e7eade26053704249846b32b1a909a0cc111e47b2276a7f179dbc33d4c9dd84209405987a750b3bb74d7ce7429ca405e0060c04b6c55cf448e0701 WHIRLPOOL 5946e33264fc006e7c3b69c007964ef1e397e7bbc34b5af6efe9b0a7967b303651a8770c89fb3157c539637f79aa7ee7af7c39f837204a9425aa298b49101ecb
 MISC metadata.xml 157 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9 SHA512 bbae663e26f48fdc5e272adc2b06c14f77f34c53caf84acb53908ff036e7c12a3edbbc0929d2db56bee861a453381d979c7e0983a23716f629ed2135c22ffece WHIRLPOOL 887e153e2481e7d76f0f1b67a395f10f0328b93930185ecdb8fcb5fe3c50f839086a18831d61cf45b34657aaffca6c3b7900cf3c04b712846a05027a84602448
