@@ -1,4 +1,4 @@
 DIST Validate-Tiny-1.015.tar.gz 31737 SHA256 17893fdf741c5103f6b3d7d8e7783f903b2414772951c942271bd6a4ccb2202f SHA512 a777c554500fb11c1fb2c021a74917ecc3f3a3971edab6cbd081d53c945dd436531f2e51c5a397898be77e1ab4144172360935f14c8a36e6744a88b385ee1a6c WHIRLPOOL efeb6b40966622c1cec2549d384d0fcd88475acbc63c401ca0299c6af977d1e4f36d610544c2342db88ff5c36318098f109102faed11fc02f1ebc8188f28092a
 EBUILD Validate-Tiny-1.015.ebuild 520 SHA256 87104194690687675b1067749929fd085b361fee149ac9fbeedb51d5844eaa41 SHA512 e5e39040522394f1a060ae3d0b885e37d22c93b9dd00cfded304576e0ffb7a13c580d3f65fa1391d3a18f2462dec0e1831cd8d728e9ed41790e04f3e7978726f WHIRLPOOL 7597521bb68e62ce3fa94df26a87e44cdefa67adc167e9b63070a6ccf3cacf474d5a0184dea1ceb55277ef713924d012ad0ac89d03413542bec5dfcea83cc996
-MISC ChangeLog 219 SHA256 356f277036eb78251b27daa554e63f66f9be8edc4e14450aaaebd5c69d2f1e30 SHA512 593d613df78503e1fc720d58ad686227c5b8299615025fadf33b900967f0797310e4aeaa00cbf0ccb3c6147fc08f54d6bc87cb9fe2175618d10f5249f89ebdee WHIRLPOOL d36715e3f01161e6bc7f44842f15e3e27f24e14ca2619d3294e364e751075d1d5a92b7384cf07db0ba6961bc9f8219e4874b66931a934ff997d7675eddb929d4
+MISC ChangeLog 345 SHA256 1cf4dae7b9c08514eeff839a7679e4fcdf19109d5c30fc6100a69b6a78a5191e SHA512 64f35e7ca9a67a88210b3135cc24e42f54085334002c24294205b3e4476971d52cf178ca43c623f8633377fc46789830f7a0199a89b8d047f42ee408208c0c23 WHIRLPOOL 39e5c2fc266b12e52c8c42dc9a38deca01f13fcae3ee5f2bef85ee2e0fb0a7c315f9e6f627934952a0f02d3e427144b5dad290dfc6f7a0521753bf64718785ed
 MISC metadata.xml 370 SHA256 df37b29b2a91f3005a0e82ef3cf2281161a3a53d7524c0c61a094d648e2940d4 SHA512 725fc3cf27c977a75a6bd9d5fe737b69c33a4bc475124e29781d587f8c88f6f7fc5dd3df10538f87e68da98f3f6091f36256017139eb2918cd5b0390ac4852ce WHIRLPOOL af9eb0969d0c0278e575040a97a07754d43e12c779463ef5971f90675d391409bdd3a37e3d8f35277baa5588d147da1d6ce006c4af0b29fa9a7bd4ec078f3dc8
