@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile configure install preinst prepare setup test unpack
-DEPEND=>=virtual/jdk-1.7 app-arch/unzip test? ( dev-java/ant-junit:0 ) >=dev-java/bcprov-1.50 >=dev-java/bcmail-1.45 >=dev-java/commons-logging-1.1.1:0 dev-java/icu4j:4 dev-java/junit:4 >=dev-java/java-config-2.1.9-r1 source? ( app-arch/zip ) >=dev-java/ant-core-1.8.2 >=dev-java/javatoolkit-0.3.0-r2
+DEPEND=>=virtual/jdk-1.7 app-arch/unzip test? ( dev-java/ant-junit:0 ) >=dev-java/bcprov-1.50 dev-java/bcmail:1.45 >=dev-java/commons-logging-1.1.1:0 dev-java/icu4j:4 dev-java/junit:4 >=dev-java/java-config-2.1.9-r1 source? ( app-arch/zip ) >=dev-java/ant-core-1.8.2 >=dev-java/javatoolkit-0.3.0-r2
 DESCRIPTION=Java library and utilities for working with PDF documents
 EAPI=5
 HOMEPAGE=http://pdfbox.apache.org/
 IUSE=elibc_FreeBSD doc source test elibc_FreeBSD
 KEYWORDS=~x86 ~amd64
 LICENSE=BSD
-RDEPEND=>=virtual/jre-1.7 >=dev-java/bcprov-1.50 >=dev-java/bcmail-1.45 >=dev-java/commons-logging-1.1.1:0 dev-java/icu4j:4 dev-java/junit:4 >=dev-java/java-config-2.1.9-r1 source? ( app-arch/zip )
+RDEPEND=>=virtual/jre-1.7 >=dev-java/bcprov-1.50 dev-java/bcmail:1.45 >=dev-java/commons-logging-1.1.1:0 dev-java/icu4j:4 dev-java/junit:4 >=dev-java/java-config-2.1.9-r1 source? ( app-arch/zip )
 SLOT=1.8
 SRC_URI=mirror://apache/pdfbox/1.8.8/pdfbox-1.8.8-src.zip http://repo2.maven.org/maven2/com/adobe/pdf/pcfi/2010.08.09/pcfi-2010.08.09.jar
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	java-ant-2	1091461b8b02f54fabcfbf159164ff15	java-pkg-2	65bbb59987d777c1106ae8aa4bf36e7b	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=fba870d3e931fc3ce41f391e36983da3
+_md5_=4f99ca5222baf8e2c64fef6d92f2a383
