@@ -1,12 +1,0 @@
-DEFINED_PHASES=compile install postinst postrm prepare
-DEPEND=dev-python/setuptools =dev-lang/python-2*
-DESCRIPTION=Provides support for reading and writing of CIF using python
-EAPI=3
-HOMEPAGE=http://pycifrw.berlios.de/
-KEYWORDS=~amd64 ~x86
-LICENSE=ASRP
-RDEPEND=dev-python/setuptools =dev-lang/python-2*
-SLOT=0
-SRC_URI=mirror://berlios/pycifrw/PyCifRW-3.3.tar.gz
-_eclasses_=distutils	92e738ea29389cb3f34778d7a349ac71	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python	cd022f89fef846d083fc994b9e3d8c04	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=753780fc9a6906fafeee346897d1b6cc
