@@ -1,28 +1,28 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
-DIST PyCifRW-3.3.tar.gz 348544 SHA256 38e26477c84ecd29e8d9b248c1b9093e5cae808c18eb0b02445add516a70eeef SHA512 1b49133d74ff44eece733ba91264bb2631bd9860e10466f3cbba53c1451e558db27119c4046b56d3930623108a1e763922be7958347aa9214f8f477e2ca45605 WHIRLPOOL a5eba57582465ca8fc56828d04e3a142b04de6e20cae9f9c7349066d15ecedc1bb26c33d8e8fe068c2ef03c2d13973af1eda68acc37ad67cd46f9249e7cf6263
 DIST PyCifRW-3.6.2.tar.gz 356813 SHA256 4d0a67311460e1f9ca65780d6cb34ec07e069d07ac19233dac9a0a6b50d0a0e8 SHA512 21b5738deb54a7293faef2d0cb578047be15feb1e2a0f4e6566777977ec8955c4281e6eddc920c08705f553acec4a574b52ca60b37b8bc0269d6b2cdaec7bf71 WHIRLPOOL 2e03e9e66b93002894831d893e69b792ce2d65362cfbe3191334c0807b528df13da881fada083f1384efafde74799b6cad9ef5d97a55b3136aaa8f36daf6788d
-EBUILD pycifrw-3.3-r1.ebuild 782 SHA256 6e3ec1aa4449a1d02aff8e75d3c0fe518072f2a5f8a135f97fbb3db1fe321ea3 SHA512 a61c41cd73399cda6a82cabefb34c0c584deb6e6ddbcffd944e883f3dd3b3e250a8443323f2163eea2c44f2e3cd34cfa636ffca99e25b9412b1aa10bd38318ab WHIRLPOOL aa760fde2983d91708844144ac1c306a87e1c8eed59e3a72bc9e487fa30d74a4779420112cd390cdd8995b4e1e29a2be4fdd390c7b10dc5949a1f69d7b866dda
+DIST PyCifRW-4.1.1.tar.gz 446258 SHA256 00192f708a4840695caccabdff65f558d2842d2da6d7ff0e538417aa0aaedbae SHA512 5358080528851b1341c5294ade0741450963bea26b731ec1cb820e012d921dd329137413b3ca1ffb7d7915a4796415f8b3f9654711052ac744d8db7d6104e18d WHIRLPOOL 8835c3f957b7a48fd5026c11150fef483fab16c16a88b1807b61e754f30222482a56ba4d4b299f1d692c15f383e90677992b5ec55d0ee873eee327725de34f77
 EBUILD pycifrw-3.6.2.ebuild 634 SHA256 da64e682858396cf94f63c99cad673068743ba8cfcb820976754097c64fb862f SHA512 23d2853dd80da62f64c5ba94adaa2f6269e6a453a742b21194b93d59b18c2892cb5ac995a24533264a60685ecaa7d0c56234940a04045c061a563b8777d24bb2 WHIRLPOOL a801013e6771c23bf3f954ef186fc020dc4dd181380ffba921f25221b406f89ba7947e10c7f7a2f9dc7891d058cf78ab117aefcb4921c515d7cc5e21440d777d
-MISC ChangeLog 950 SHA256 8781825f752032d153c37ae9f0e1d7a087e7ac4a723e466ee2de251cb8a3bd9c SHA512 b25ef580499617f47908317590215f143890ed457e8758dc6fe15da433fda8899c176a2029a97ba5a46e7e802f519d488a03646df7dfb2b7a832a5ed194383e4 WHIRLPOOL d84557a0311909d460c64842753f22c1e8cd918c3b035fc366b02a879c113f41f7a028b2c16b958789aff7bb62abeb38cf9de39eef8aea16780ab8c50c3783f4
+EBUILD pycifrw-4.1.1.ebuild 641 SHA256 09d6498e6ee0885ed8be436a88aec1c139339014a2e5dc3de724b0f7c20de3fd SHA512 5d61c45a7b78d0cfb30a5936a3d761d9ca13244a7c7a0e80cbcf685fd1ff1b33b60205dc77d333b91f80e15f1d788abf1b0118a4084dea47c3a26c81e198d37b WHIRLPOOL ad2a91c32941e1f559b66d64c9634bfbbffa1df0909ca4446dee274e2b1ef1013ad26f229476ae93e0503bc5d46a6bbd2027b3a6d07aa41c821f1beaa1e577aa
+MISC ChangeLog 1130 SHA256 0de3b4f6d363a14ff8adc882864e11a07866552968ddf9444b06aedc3c3a9d5c SHA512 9fd49cb4a15272f98ee133381b68cacdb901b6a66cb81ea2801db5aed1c8041fcf358f4293d7c4fd48c8c42dced65784a0c76e637e0a1a8cadd67575fcb88f1f WHIRLPOOL da942f4e3d85e3a023f71177c757ba8cf7c6683bd1ad5df8b8f139e22589b6f5c81f8db813733813377d8976e02b8a53ba908589fc844b2c50d92f2111d10585
 MISC metadata.xml 234 SHA256 8297e76ecd2cb828f604e9f138b263179eb84beb640215a0f60d7613eb46bb7f SHA512 0e94c0e6570a9267a39968d81c3b80680ccbc6eebb62199e4830b021a114c94a0de17ef2103cef62b7e27da1f51f225a30abb802aff82140ae6dc43366113d31 WHIRLPOOL fa6d4d90b092953b88ed3ad03e1e8c189296d268b39d13a4b4dcb78f0c4456341e3f1b44eea0860054fee43079179cb7cf7a912acf1fbe693ecdca6d9a65f081
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCgBmBQJTuTFQXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCgBmBQJU6caOXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirXl8P/3+VJgUid1kA2IKOPCvg7qU4
-u502c40+Tzl+CsTgB0DPbCy+SI7kZPBBhoAeQrhmxeJIT0oiyKy/IybVxPQ/RmEQ
-isQzaP5xNiq4jatrhNMrvG/8e3l1eEtV/EzdZp3dcltu+4nGA3j0d8lOiu1Hawej
-UyWI4aYFfLmv4iwClYwhr7TOPua+DeJ8fQLV46Ypl3tAQNsiqZVUwpO5r57p8dXf
-M5ufr42SLdde4BPR48MvMDcjX4nv0PIDEqhmbmr/175U42wZ+nk4B6fD92gHiIo2
-Ov1z5QOJ+xY7ydBXkCmgr4VQ7nbKNirUffk0ZTIlk4H/KlOpTT6VQMGjpwTNZUEy
-abxwzVTQq2rtW+Y+FTEoXcmVL5tdYl1XFZ1RVCceT6rwXfYi1LpMk+89P0T6mv+V
-2Nyg4uQCzWZ4iQDTvUy7ZP1kPkgPMfRCErgKVlAcDZ5EAzxgVK+G89rUlMWXqE12
-w+5W8V0cFtJ3E8AQrLAliDY6aFjrTkXVw1kO7FdgKiRMUjNG/Exl0rMG9aJZSSTw
-/iG67ybTUiLyUE5IwNdbbyuD7Vs4Z2sRxf7LDez8SVaObeIAGO5xDM+6O3o4fIFt
-9QsO41W5s8XkkLQ+HJFN3gcHsgsdnsh2C/RNINLIPIRf2jUZuvPn0DkOS+Qe9ruj
-f3RXQpiymdFg0aNu4Teh
-=UhZa
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirnhUP/1yRxg7I0TUodIBVYmb6rx6k
+XZG/M6KxWwWAQ0CEkCYgApZYZrMxxWRqNHmJUHIOUu8kKncZuEVTs1neWHeIzyGK
+9azSvzavBmHXoAwXM2rTQHAbm3j7rojHDvSooCwKSQBhbRSk4Z7hs5vDyRKBZFzw
+P3UgBI68rrn9hmeCCJ71fOUyiBvLYkvYEqw/WhLSFeh5Xn5nDtQGSW5u0JM6fkLD
+8XpOfwMftcYbzdcDbHAGzScwNDdPgNlqgIQkWKORE6Ej/dK4zhXv2G2t0vI+UA/+
+iKg//EoJVfPO62Xc4CU06pkQiSx9I/vWO4MdnQGlyw0KhRNDxPtaGgNwHHxYJ97K
+78Uqq8E0iwuXUKXqHzZ2xqhT0/M9tyKWkNAhOKysfSElFpfQrchzfTK07c38DA7E
+heQ3azpqiK0YHMwA5eVfSytQcRlxOEu9yla5kkJpy5wX8BKEhCpYMdB7izDlrxmk
+1XxMQWvckGgu07vOuRB/AqhB8Z4OKZpjl4gXlBpm1bGzcHvqe3wpqN+usgsDEXZw
+LuQ00FGS1Yzp5wvJifwP+pMrxDUT/vR3wCchzhEOChT1yHlroqdhqjtPAzKmFfG2
+svqj+JjJWrB1NXXBKceTbllOaDHAXmDYQ/ACBD3fgLtTEBexv/EtrKMEqTH9nPsn
+3cpJB9R1MLUHUddwzhTU
+=CG//
 -----END PGP SIGNATURE-----
