@@ -1,6 +1,12 @@
 # ChangeLog for sci-libs/pycifrw
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/pycifrw/ChangeLog,v 1.5 2014/07/06 11:21:38 jlec Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/pycifrw/ChangeLog,v 1.6 2015/02/22 12:03:15 jlec Exp $
+
+*pycifrw-4.1.1 (22 Feb 2015)
+
+  22 Feb 2015; Justin Lecher <jlec@gentoo.org> +pycifrw-4.1.1.ebuild,
+  -pycifrw-3.3-r1.ebuild:
+  Version Bump, #540834; Improve DESCRIPTION, #540836
 
 *pycifrw-3.6.2 (06 Jul 2014)
 
@@ -26,4 +32,3 @@
   28 Apr 2010; Justin Lecher <jlec@gentoo.org> +pycifrw-3.3.ebuild,
   +metadata.xml:
   Initial commit
-
